Final changes to the queue dispatcher. I hadn't realized I hadn't committed these before

--- a/hosting.css
+++ b/hosting.css
@@ -2,6 +2,7 @@
   display: inline;
 }
 
-.hosting-queue-frequency {
+.hosting-queue-frequency, .hosting-queue-frequency-head {
   text-align: right;
+  padding-right: 2em;
 }
