--- a/hosting.css
+++ b/hosting.css
@@ -2,26 +2,36 @@
  *  Overview 
  */
 
-#hosting-platform-info, #hosting-site-info {
+#hosting-platform-info, #hosting-site-info, #hosting-task-info {
   float:left;
   width:35%;
   padding: 2% 5%;
-  margin:30px 0;
+  margin:25px 0;
   background:#F1F1F1;
   border:solid 3px #CCC;
 }
 
-#hosting-platform-info label, #hosting-site-info label {
+#hosting-task-info {
+  float:none;
+  width:auto;
+}
+
+#hosting-task-info .form-item {
+  float:left;
+  margin:0 3em  0 0;
+}
+
+#hosting-platform-info label, #hosting-site-info label, #hosting-task-info label {
   float:left;
   margin:0 5px 0 0;
 }
 
-#hosting-recent-tasks, #hosting-task-list {
+#hosting-task-list {
   width:49%;
   float:right;
 }
 
-#hosting-recent-tasks label, #hosting-site-list label, #hosting-task-list label {
+#hosting-site-list label {
   font-size:1.4em;
   margin:0.5em 0 0;
   font-weight:normal;
@@ -31,12 +41,12 @@
   clear:both;
 }
 
-#hosting-site-list table, #hosting-recent-tasks table, #hosting-task-list table {
+table.hosting-table {
   border:solid 1px #F1F1F1;
   border-bottom:solid 1px #F1F1F1;
 }
 
-#hosting-site-list table th, #hosting-recent-tasks table th, #hosting-task-list table th {
+table.hosting-table th {
   border:solid 1px #808080;
   border-bottom-width: 2px;
   border-bottom-color: #333333;
@@ -47,15 +57,15 @@
   color:#FFF;
 }
 
-#hosting-site-list table th a, #hosting-recent-tasks table th a, #hosting-task-list table th a {
+table.hosting-table th a {
   color:#FFF;
 }
 
-#hosting-site-list table tr, #hosting-recent-tasks table tr, #hosting-task-list table tr {
+table.hosting-table tr {
   border-color:#CCC !important;
 }
 
-#hosting-site-list table td, #hosting-recent-tasks table td, #hosting-task-list table td {
+table.hosting-table td {
   padding:5px 5px 5px 10px;
   margin:3px 2px;
   border-left:solid 1px #F1F1F1;
