--- a/hosting_help.css
+++ b/hosting_help.css
@@ -2,9 +2,10 @@
 
 div.hosting-requirement-help .message {
   background-repeat: no-repeat;
-  background-position: 4px 4px;
+  background-position: 3px 3px;
   padding-left: 27px;
   padding-right: 1em;
+  padding-top:2px;
   font-weight: bold;
 }
 
