#605266 - added some classes to hosting-processing, so it shows the throbber while it is busy working, and if the node changed timestamp is changed, the entire page is now reloaded so changes can take effect.

--- a/hosting.css
+++ b/hosting.css
@@ -83,6 +83,7 @@ td.hosting-package-downgrade {
 }
 
 tr.hosting-queue,
+tr.hosting-processing,
 th.hosting-package-same,
 td.hosting-package-same {
   background-color: #e0e8f0 !important;
@@ -110,6 +111,9 @@ td.hosting-package-same {
   background-image: url(images/icon-queue.png);
 }
 
+tr.hosting-processing td.hosting-status {
+  background-image: url(images/loader.gif);
+}
 tr.hosting-error td.hosting-status,
 th.hosting-package-downgrade,
 td.hosting-package-downgrade {
