Abstract the site link away, and add functionality to the install task which stores the one time login link in the cache table. When the user clicks on the link they will be automatically logged in if the link has not been clicked yet or 24 hours has not passed. otherwise they will just be directed to the site. You need to flush all your caches as a new menu entry was created

--- a/hosting.css
+++ b/hosting.css
@@ -251,3 +251,5 @@ th.hosting-actions {
 
 div#hosting-task-list, div#hosting-task-queue-block { position: relative }
 div.modalframe-page-wrapper { background: white }
+
+.hosting-goto-site-link { font-weight: bold } 
