--- a/hosting.css
+++ b/hosting.css
@@ -150,15 +150,9 @@ div.hosting-task-retry form, div.hosting-task-retry form input {
  *  Forms
  */
 
-#hosting-wizard-form {
-  margin-left: auto;
-  margin-right: auto;
+div.hosting-site-field-description {
+  display: none;
 }
-
-#hosting-wizard-account-details { width : 45%; float: left; padding: 0 10px; }
-#hosting-wizard-account-passwd { width : 45%; float: right; padding: 0 10px; }
-
-div.hosting-wizard-glossary { padding: 0 2em; display: none; }
 
 
 /**
