--- a/hosting.css
+++ b/hosting.css
@@ -56,6 +56,10 @@ td.hosting-actions .hosting-button-disabled {
   float: right;
 }
 
+.hosting-task-full {
+  display: none;
+}
+
 /**
  * Status icons, colors.
  */
